Revert "U-Boot: copy various builds to u-boot.configname"
This reverts commit 95855ecb2a519521be660dfa63434d6dd66f2616.

--- a/core/Makefile
+++ b/core/Makefile
@@ -756,7 +756,7 @@ $(TARGET_BOOTLOADER_IMAGE):
 		$(MAKE) -C bootable/bootloader/uboot-imx/ distclean $(BOOTLOADER_ENV); \
 		$(MAKE) -C bootable/bootloader/uboot-imx/ $$UBOOT_CONFIG $(BOOTLOADER_ENV); \
 		$(MAKE) -C bootable/bootloader/uboot-imx/ $(BOOTLOADER_ENV); \
-		install -D bootable/bootloader/uboot-imx/u-boot.imx $(PRODUCT_OUT)/u-boot.$$UBOOT_CONFIG; \
+		install -D bootable/bootloader/uboot-imx/u-boot.imx $(PRODUCT_OUT)/u-boot-$$UBOOT_PLATFORM.bin; \
 		install -D bootable/bootloader/uboot-imx/u-boot.imx $@; \
 	done
 else
