kernel_imx: fix kernel build dependencies
	KERNEL_CONFIGURE (kernel_imx/.config) depends on _defconfig
		and is created by make xyz_defconfig

	TARGET_KERNEL_CONFIGURE (in product directory) is created
		by "install"ing kernel_imx/.config

	KERNEL_UIMAGE depends on KERNEL_CONFIGURE and is built by
		running "make uImage" in kernel_imx

	TARGET_PREBUILT_KERNEL (in product directory) is created
		by "install"ing from kernel_imx/arch/arm/boot/

Signed-off-by: Eric Nelson <eric.nelson@boundarydevices.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -781,13 +781,15 @@ KERNEL_OUT := $(TARGET_OUT_INTERMEDIATES)/KERNEL_OBJ
 kernelimage: $(TARGET_PREBUILT_KERNEL)
 
 $(KERNEL_CONFIGURE): kernel_imx/arch/arm/configs/$(TARGET_KERNEL_DEFCONF)
+	$(MAKE) -C kernel_imx $(TARGET_KERNEL_DEFCONF) $(KERNEL_ENV)
 
 $(TARGET_KERNEL_CONFIGURE): kernel_imx/arch/arm/configs/$(TARGET_KERNEL_DEFCONF) $(KERNEL_CONFIGURE)
-	$(MAKE) -C kernel_imx $(TARGET_KERNEL_DEFCONF) $(KERNEL_ENV)
 	install -D $(KERNEL_CONFIGURE) $(TARGET_KERNEL_CONFIGURE)
 
-$(TARGET_PREBUILT_KERNEL): $(TARGET_KERNEL_CONFIGURE)
+$(KERNEL_UIMAGE): $(KERNEL_CONFIGURE)
 	$(MAKE) -C kernel_imx -j$(HOST_PROCESSOR) uImage $(KERNEL_ENV)
+
+$(TARGET_PREBUILT_KERNEL): $(KERNEL_UIMAGE)
 	install -D $(KERNEL_UIMAGE)  $(PRODUCT_OUT)/uImage
 	install -D $(KERNEL_ZIMAGE)  $(PRODUCT_OUT)/kernel
 
