Add install of uImage into boot/ partition
This way, a 'make bootimage' target will update the uImage located in
the boot/ partition.

Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -831,6 +831,7 @@ $(KERNEL_UIMAGE): $(KERNEL_CONFIGURE)
 
 $(TARGET_PREBUILT_KERNEL): $(KERNEL_UIMAGE)
 	install -D $(KERNEL_UIMAGE)  $(PRODUCT_OUT)/uImage
+	install -D $(KERNEL_UIMAGE)  $(PRODUCT_OUT)/boot/uImage
 	install -D $(KERNEL_ZIMAGE)  $(PRODUCT_OUT)/kernel
 	for dtsplat in $(TARGET_BOARD_DTS_CONFIG); do \
 		DTS_PLATFORM=`echo $$dtsplat | cut -d':' -f1`; \
