Forcing kernelmodules as a dependency for system.img creation
Otherwise the system.img can be created without the module inside in
case of a parallel build.

Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -988,7 +988,8 @@ $(INSTALLED_SYSTEMIMAGE): $(BUILT_SYSTEMIMAGE) $(RECOVERY_FROM_BOOT_PATCH) | $(A
 	$(copy-file-to-target)
 	$(hide) $(call assert-max-image-size,$@ $(RECOVERY_FROM_BOOT_PATCH),$(BOARD_SYSTEMIMAGE_PARTITION_SIZE),yaffs)
 
-systemimage: $(INSTALLED_SYSTEMIMAGE)
+.NOTPARALLEL: systemimage
+systemimage: kernelmodules $(INSTALLED_SYSTEMIMAGE)
 
 .PHONY: systemimage-nodeps snod
 systemimage-nodeps snod: $(filter-out systemimage-nodeps snod,$(MAKECMDGOALS)) \
