Forcing kernelmodules as a dependency for system.img creation
Otherwise the system.img can be created without the module inside in
case of a parallel build.

Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -1141,8 +1141,10 @@ $(RECOVERY_FROM_BOOT_PATCH): $(INSTALLED_RECOVERYIMAGE_TARGET) \
 	PATH=$(HOST_OUT_EXECUTABLES):$$PATH $(HOST_OUT_EXECUTABLES)/imgdiff $(INSTALLED_BOOTIMAGE_TARGET) $(INSTALLED_RECOVERYIMAGE_TARGET) $@
 endif
 
+BUILT_KERNELMODULES := $(kernel_modules_src_list)
+$(BUILT_KERNELMODULES): kernelmodules
 
-$(INSTALLED_SYSTEMIMAGE): $(BUILT_SYSTEMIMAGE) $(RECOVERY_FROM_BOOT_PATCH) | $(ACP)
+$(INSTALLED_SYSTEMIMAGE): $(BUILT_SYSTEMIMAGE) $(RECOVERY_FROM_BOOT_PATCH) $(BUILT_KERNELMODULES) | $(ACP)
 	@echo "Install system fs image: $@"
 	$(copy-file-to-target)
 	$(hide) $(call assert-max-image-size,$@ $(RECOVERY_FROM_BOOT_PATCH),$(BOARD_SYSTEMIMAGE_PARTITION_SIZE))
